# sentinel

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx
desktop/src-tauri/: .gitignore  Info.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src/components/: Controls.tsx  Dossier.tsx  ExplorePanel.tsx  Viewport.tsx
desktop/src/lib/: types.ts  useEngineSocket.test.ts  useEngineSocket.ts  view.test.ts  view.ts
engine/: .gitignore  README.md  pyproject.toml
engine/packaging/: serve_entry.py
engine/src/sentinel_engine/: anomaly.py  audio.py  capture.py  cli.py  codec.py  config.py  controller.py  embed.py  eval.py  explore.py  frameskip.py  metrics.py  pipeline.py  project.py  protocol.py  server.py  session.py  store.py  teach.py  tuner.py  types.py  watcher.py
engine/tests/: support.py  test_anomaly.py  test_audio.py  test_capture.py  test_cli.py  test_codec.py  test_config.py  test_controller.py  test_embed.py  test_eval.py  test_explore.py  test_frameskip.py  test_metrics.py  test_pipeline.py  test_project.py  test_protocol.py  test_server.py  test_session.py  test_store.py  test_teach.py  test_tuner.py  test_watcher.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: dark-veil.tsx  scroll-reveal.tsx
frontend/components/sections/: cta.tsx  dossier.tsx  (+8 more)
frontend/lib/: cn.ts  content.ts  icons.tsx  tokens.ts
scripts/: run.sh
(+4 files in other folders)
